--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ msgpack==1.0.2
 msgpack-python==0.5.6
 numpy==1.21.2
 opencv-python==4.5.3.56
+opencv-python-headless
 Pillow==8.3.2
 psycopg2==2.9.1
 pyasn1==0.4.8
