--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Django==3.2.7
 django-crispy-forms==1.13.0
 django-environ==0.7.0
 django-heroku==0.3.1
+django-mathfilters==1.0.0
 django-storages==1.12
 gunicorn==20.1.0
 hiredis==2.0.0
