--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 aioredis==1.3.1
+appdirs==1.4.4
 asgiref==3.4.1
 async-timeout==3.0.1
 attrs==21.2.0
 autobahn==21.3.1
 Automat==20.2.0
+beautifulsoup4==4.10.0
 boto3==1.18.58
 botocore==1.21.58
 certifi==2021.5.30
@@ -14,23 +16,30 @@ charset-normalizer==2.0.6
 constantly==15.1.0
 cryptography==3.4.8
 daphne==3.0.2
+dj-database-url==0.5.0
 Django==3.2.7
 django-crispy-forms==1.13.0
+django-editorjs==0.2.1
 django-environ==0.7.0
+django-filter==21.1
 django-heroku==0.3.1
+django-js-asset==1.2.2
 django-mathfilters==1.0.0
+django-mptt==0.13.4
 django-storages==1.12
+djangorestframework==3.12.4
+filelock==3.4.0
 gunicorn==20.1.0
 hiredis==2.0.0
 hyperlink==21.0.0
 idna==3.2
 incremental==21.3.0
 jmespath==0.10.0
+Markdown==3.3.4
 msgpack==1.0.2
 msgpack-python==0.5.6
 numpy==1.21.2
 opencv-python==4.5.3.56
-opencv-python-headless
 Pillow==8.3.2
 psycopg2==2.9.1
 pyasn1==0.4.8
@@ -44,9 +53,14 @@ requests==2.26.0
 s3transfer==0.5.0
 service-identity==21.1.0
 six==1.16.0
+soupsieve==2.3.1
 sqlparse==0.4.2
 Twisted==21.7.0
+twisted-iocpsupport==1.0.2
 txaio==21.2.1
 typing-extensions==3.10.0.2
+uritools==3.0.2
+urlextract==1.4.0
 urllib3==1.26.6
+whitenoise==5.3.0
 zope.interface==5.4.0
