--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ django-editorjs==0.2.1
 django-environ==0.7.0
 django-filter==21.1
 django-heroku==0.3.1
+django-htmx==1.6.0
 django-js-asset==1.2.2
 django-mathfilters==1.0.0
 django-mptt==0.13.4
